[package]
name          = 'happywav'
version       = '0.1.0'
edition       = '2021'
authors       = ['kimhappy <kimhappyofficial@gmail.com>']
description   = 'A simple and easy-to-use WAV file encoder / decoder'
documentation = 'https://docs.rs/happywav'
readme        = 'README.md'
repository    = 'https://github.com/kimhappy/HAPPYWAV'
license       = 'MIT'

[dependencies]

[profile.release]
strip         = true
lto           = true
panic         = 'abort'
codegen-units = 1
